recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:9: error: not found: value reclule
	reclule(100);
        ^